# arduino-cmake

./: CMakeLists.txt  README.md
arduino/: CMakeLists.txt
arduino/cmake/: arduino-config-version.cmake.in  arduino-config.cmake
cmake/: toolchain.Arduino.cmake
main/: CMakeLists.txt
